glib.mk: Add enumtypes, marshal, schemas, and resources rules
Add rules to glib.mk to generate enumtypes files, marshallers,
gsettings schemas, and resource files, so that people don't have to
copy and paste the rules into every project's Makefile.am

https://bugzilla.gnome.org/show_bug.cgi?id=654395

--- a/gio/tests/.gitignore
+++ b/gio/tests/.gitignore
@@ -88,7 +88,6 @@ network-monitor
 org.gtk.test.enums.xml
 permission
 pollable
-plugin-resources.c
 proxy
 proxy-test
 readwrite
@@ -110,6 +109,7 @@ test.gresource
 test2-resources.c
 test3-resources.c
 test3-resources.h
+test4-resources.c
 tls-certificate
 tls-interaction
 unix-fd
