GSubprocess: New class for spawning child processes
There are a number of nice things this class brings:

0) On Unix, has race-free termination API (we don't reap the child
   until the GSubprocess is finalized, so the GPid is always valid)
1) Operates in terms of G{Input,Output}Stream, not file descriptors
2) Async API instead of GSource

https://bugzilla.gnome.org/show_bug.cgi?id=672102

--- a/gio/Makefile.am
+++ b/gio/Makefile.am
@@ -426,6 +426,7 @@ libgio_2_0_la_SOURCES =		\
 	gsocketlistener.c	\
 	gsocketoutputstream.c	\
 	gsocketoutputstream.h	\
+	gsubprocess.c		\
 	gproxy.c		\
 	gproxyaddress.c         \
 	gproxyaddressenumerator.c \
@@ -600,6 +601,7 @@ gio_headers =			\
 	gsocketlistener.h	\
 	gsocketservice.h	\
 	gsrvtarget.h		\
+	gsubprocess.h		\
 	gtcpconnection.h	\
 	gtcpwrapperconnection.h \
 	gthreadedsocketservice.h\
