--- a/gio/tests/.gitignore
+++ b/gio/tests/.gitignore
@@ -63,6 +63,8 @@ gdbus-serialization
 gdbus-test-codegen
 gdbus-test-codegen-generated*
 gdbus-threading
+gsubprocess
+gsubprocess-testprog
 g-file
 g-file-info
 g-icon
