--- a/gobject/Makefile.am
+++ b/gobject/Makefile.am
@@ -75,6 +75,7 @@ gobject_public_h_sources = \
 	gobject.h		\
 	gparam.h		\
 	gparamspecs.h		\
+	gproperty.h		\
 	gsignal.h		\
 	gsourceclosure.h	\
 	gtype.h			\
@@ -104,6 +105,7 @@ gobject_c_sources = \
 	gobject_trace.h		\
 	gparam.c		\
 	gparamspecs.c		\
+	gproperty.c		\
 	gsignal.c		\
 	gsourceclosure.c	\
 	gtype.c			\
