--- a/config.h.in
+++ b/config.h.in
@@ -141,6 +141,9 @@
 /* we have the eventfd(2) system call */
 #undef HAVE_EVENTFD
 
+/* Define to 1 if you have the `fallocate' function. */
+#undef HAVE_FALLOCATE
+
 /* Define if we have FAM */
 #undef HAVE_FAM
 
@@ -212,6 +215,9 @@
 
 /* Define to 1 if you have the `hasmntopt' function. */
 #undef HAVE_HASMNTOPT
+
+/* Define to 1 if you have the `if_indextoname' function. */
+#undef HAVE_IF_INDEXTONAME
 
 /* Define to 1 if you have the `if_nametoindex' function. */
 #undef HAVE_IF_NAMETOINDEX
@@ -334,6 +340,9 @@
 /* Define to 1 if you have the `on_exit' function. */
 #undef HAVE_ON_EXIT
 
+/* open option O_DIRECTORY */
+#undef HAVE_OPEN_O_DIRECTORY
+
 /* Define to 1 if you have the `pipe2' function. */
 #undef HAVE_PIPE2
 
@@ -358,6 +367,12 @@
 /* Have function pthread_condattr_setclock */
 #undef HAVE_PTHREAD_CONDATTR_SETCLOCK
 
+/* Have function pthread_cond_timedwait_monotonic */
+#undef HAVE_PTHREAD_COND_TIMEDWAIT_MONOTONIC
+
+/* Have function pthread_cond_timedwait_monotonic_np */
+#undef HAVE_PTHREAD_COND_TIMEDWAIT_MONOTONIC_NP
+
 /* Define to 1 if the system has the type `ptrdiff_t'. */
 #undef HAVE_PTRDIFF_T
 
@@ -366,6 +381,9 @@
 
 /* Define to 1 if you have the `readlink' function. */
 #undef HAVE_READLINK
+
+/* Define to 1 if you have the 'res_init' function. */
+#undef HAVE_RES_INIT
 
 /* Define to 1 if you have the <sched.h> header file. */
 #undef HAVE_SCHED_H
@@ -642,9 +660,6 @@
    */
 #undef LT_OBJDIR
 
-/* Do we cache iconv descriptors */
-#undef NEED_ICONV_CACHE
-
 /* didn't find fd_set */
 #undef NO_FD_SET
 
@@ -672,12 +687,6 @@
 /* define if posix_memalign() can allocate any size */
 #undef POSIX_MEMALIGN_WITH_COMPLIANT_ALLOCS
 
-/* whether realloc (NULL,) works */
-#undef REALLOC_0_WORKS
-
-/* Define if you have correct malloc prototypes */
-#undef SANE_MALLOC_PROTOS
-
 /* The size of `char', as computed by sizeof. */
 #undef SIZEOF_CHAR
 
@@ -695,6 +704,9 @@
 
 /* The size of `size_t', as computed by sizeof. */
 #undef SIZEOF_SIZE_T
+
+/* The size of `ssize_t', as computed by sizeof. */
+#undef SIZEOF_SSIZE_T
 
 /* The size of `void *', as computed by sizeof. */
 #undef SIZEOF_VOID_P
@@ -716,6 +728,15 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* Use no threads */
+#undef THREADS_NONE
+
+/* Use pthreads */
+#undef THREADS_POSIX
+
+/* Use w32 threads */
+#undef THREADS_WIN32
+
 /* Using GNU libiconv */
 #undef USE_LIBICONV_GNU
 
@@ -727,6 +748,28 @@
 
 /* Define to use statvfs() */
 #undef USE_STATVFS
+
+/* Enable extensions on AIX 3, Interix.  */
+#ifndef _ALL_SOURCE
+# undef _ALL_SOURCE
+#endif
+/* Enable GNU extensions on systems that have them.  */
+#ifndef _GNU_SOURCE
+# undef _GNU_SOURCE
+#endif
+/* Enable threading extensions on Solaris.  */
+#ifndef _POSIX_PTHREAD_SEMANTICS
+# undef _POSIX_PTHREAD_SEMANTICS
+#endif
+/* Enable extensions on HP NonStop.  */
+#ifndef _TANDEM_SOURCE
+# undef _TANDEM_SOURCE
+#endif
+/* Enable general extensions on Solaris.  */
+#ifndef __EXTENSIONS__
+# undef __EXTENSIONS__
+#endif
+
 
 /* using the system-supplied PCRE library */
 #undef USE_SYSTEM_PCRE
@@ -754,11 +797,18 @@
 /* defines how to decorate public symbols while building */
 #undef _GLIB_EXTERN
 
-/* Make all glibc extensions visible */
-#undef _GNU_SOURCE
-
 /* Define for large files, on AIX-style hosts. */
 #undef _LARGE_FILES
+
+/* Define to 1 if on MINIX. */
+#undef _MINIX
+
+/* Define to 2 if the system does not provide POSIX.1 features except with
+   this defined. */
+#undef _POSIX_1_SOURCE
+
+/* Define to 1 if you need to in order for `stat' and other things to work. */
+#undef _POSIX_SOURCE
 
 /* Target the Windows XP API */
 #undef _WIN32_WINNT
