--- a/docs/reference/gio/Makefile.in
+++ b/docs/reference/gio/Makefile.in
@@ -570,7 +570,7 @@ GTKDOC_LIBS = \
 
 
 # Extra options to supply to gtkdoc-mkdb
-MKDB_OPTIONS = --output-format=xml --sgml-mode --name-space=g \
+MKDB_OPTIONS = --output-format=xml --name-space=g \
 	--ignore-files='libasyncns tests'
 
 
