--- a/docs/reference/gobject/Makefile.in
+++ b/docs/reference/gobject/Makefile.in
@@ -422,7 +422,7 @@ SCAN_OPTIONS = --deprecated-guards="G_DISABLE_DEPRECATED" \
 
 
 # Extra options to supply to gtkdoc-mkdb
-MKDB_OPTIONS = --sgml-mode --output-format=xml --name-space=g
+MKDB_OPTIONS = --output-format=xml --name-space=g
 
 # Used for dependencies
 HFILE_GLOB = $(top_srcdir)/gobject/*.h
