Doc: gobject: enable gtkdoc-check
https://bugzilla.gnome.org/show_bug.cgi?id=740814

--- a/docs/reference/gobject/Makefile.am
+++ b/docs/reference/gobject/Makefile.am
@@ -100,3 +100,12 @@ dist-hook-local: all-local
 
 gobject-docs-clean: clean
 	cd $(srcdir) && rm -rf xml html
+
+if ENABLE_GTK_DOC
+if ENABLE_GTK_DOC_CHECK
+TESTS_ENVIRONMENT = \
+  DOC_MODULE=$(DOC_MODULE) DOC_MAIN_SGML_FILE=$(DOC_MAIN_SGML_FILE) \
+  SRCDIR=$(abs_srcdir) BUILDDIR=$(abs_builddir)
+TESTS = $(GTKDOC_CHECK)
+endif
+endif
