Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Mirrror Of git://git.gnome.org/glib
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
